# ai-comic-drama-platform

./: .env.example  .gitignore  BUG_FIX_SUMMARY.md  PROJECT_SUMMARY.md  README.en.md  README.md  package-lock.json  package.json
apps/api/: E2E_TEST_GUIDE.md  QUICKSTART.md  RERUN_API_IMPLEMENTATION.md  REVIEW_API_IMPLEMENTATION.md  TROUBLESHOOTING.md  WORKSPACE_INTEGRATION_SUMMARY.md  check_syntax.py  pyproject.toml  requirements.txt  run_e2e_test.ps1  run_e2e_test.sh  test_brief_simple.py  test_full_workflow.py  test_rerun_api_manual.py  test_workspace_qa_display.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/repositories/: asset_repository.py  document_repository.py  episode_repository.py  export_bundle_repository.py  project_repository.py  qa_repository.py  review_repository.py  shot_repository.py  stage_task_repository.py  trace_record_repository.py  workflow_repository.py
apps/api/app/schemas/: EXPORT_SCHEMA_README.md  common.py  document.py  export.py  preview.py  project.py  qa.py  rerun.py  review.py  workflow.py  (+1 more)
apps/api/docs/: MEDIA_PIPELINE_GUIDE.md  OBJECT_STORAGE.md  PROVIDER_ADAPTERS.md  QA_RUNTIME.md  RERUN_GUIDE.md  REVIEW_FLOW.md
apps/api/scripts/: checkpoint_summary.py  checkpoint_validation.py  checkpoint_validation_iteration5.py  final_checkpoint_summary.py  fix_review_tests.py  fix_test_fixtures.py
apps/api/tests/: README.md  SETUP_SUMMARY.md  conftest.py  setup_test_db.py  test_conftest_setup.py  test_hypothesis_setup.py  test_setup.py
(+153 files in other folders)
